# Slime_sim

./: CMakeLists.txt  main.c  readme.md
headers/: agent_field.h  trace_map.h
src/: agent_field.c  trace_map.c
